added text file editing and thumbnail generation

--- a/elFinder.MVCTest/Web.config
+++ b/elFinder.MVCTest/Web.config
@@ -14,7 +14,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <elFinder apiVersion="2.0" localFSRootDirectoryPath="c:\users" localFSThumbsDirectoryPath="c:\users\.thumbs" rootDirectoryName="Root" uploadMaxSize="20M"
-          defaultVolumeName="LocalFileSystem" baseUrl="http://localhost:55470/data/" baseThumbsUrl="http://localhost:55470/data/.thumbs/">
+          defaultVolumeName="LocalFileSystem" baseUrl="http://localhost:55470/data/" 
+            baseThumbsUrl="http://localhost:55470/data/.thumbs/" 
+            duplicateFilePattern="Copy of {0}" duplicateDirectoryPattern="Copy of {0}" thumbsSize="48,48">
   </elFinder>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
