--- a/elFinder.Connector/elFinder.Connector.csproj
+++ b/elFinder.Connector/elFinder.Connector.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,12 +51,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\DuplicateCommand.cs" />
     <Compile Include="Command\GetCommand.cs" />
     <Compile Include="Command\MkfileCommand.cs" />
     <Compile Include="Command\MkdirCommand.cs" />
     <Compile Include="Command\PasteCommand.cs" />
+    <Compile Include="Command\PutCommand.cs" />
     <Compile Include="Command\RenameCommand.cs" />
     <Compile Include="Command\RmCommand.cs" />
+    <Compile Include="Command\TmbCommand.cs" />
     <Compile Include="Command\TreeCommand.cs" />
     <Compile Include="Command\ICommand.cs" />
     <Compile Include="Command\OpenCommand.cs" />
@@ -69,12 +73,15 @@
     <Compile Include="Model\ObjectModel.cs" />
     <Compile Include="Model\OptionsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Response\DuplicateResponse.cs" />
+    <Compile Include="Response\PutResponse.cs" />
     <Compile Include="Response\GetResponse.cs" />
     <Compile Include="Response\PasteResponse.cs" />
     <Compile Include="Response\RmResponse.cs" />
     <Compile Include="Response\MkfileResponse.cs" />
     <Compile Include="Response\MkdirResponse.cs" />
     <Compile Include="Response\RenameResponse.cs" />
+    <Compile Include="Response\TmbResponse.cs" />
     <Compile Include="Response\TreeResponse.cs" />
     <Compile Include="Response\DirectoryResponse.cs" />
     <Compile Include="Response\ErrorResponse.cs" />
@@ -84,8 +91,10 @@
     <Compile Include="Config\IConnectorConfig.cs" />
     <Compile Include="Response\UploadResponse.cs" />
     <Compile Include="Service\Base64CryptoService.cs" />
+    <Compile Include="Service\DefaultImageEditorService.cs" />
     <Compile Include="Service\DefaultVolumeManager.cs" />
     <Compile Include="Service\ICryptoService.cs" />
+    <Compile Include="Service\IImageEditorService.cs" />
     <Compile Include="Service\IVolume.cs" />
     <Compile Include="Service\IVolumeManager.cs" />
     <Compile Include="Service\LocalFileSystemVolume.cs" />
