--- a/elFinder.Connector/elFinder.Connector.csproj
+++ b/elFinder.Connector/elFinder.Connector.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\DuplicateCommand.cs" />
+    <Compile Include="Command\FileCommand.cs" />
     <Compile Include="Command\GetCommand.cs" />
     <Compile Include="Command\MkfileCommand.cs" />
     <Compile Include="Command\MkdirCommand.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="Model\ObjectModel.cs" />
     <Compile Include="Model\OptionsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Response\BinaryFileResponse.cs" />
     <Compile Include="Response\DuplicateResponse.cs" />
     <Compile Include="Response\PutResponse.cs" />
     <Compile Include="Response\GetResponse.cs" />
