--- a/elFinder.Connector/elFinder.Connector.csproj
+++ b/elFinder.Connector/elFinder.Connector.csproj
@@ -31,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=2.6.3.862, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\3rdparty\Autofac.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\3rdparty\Newtonsoft.Json.dll</HintPath>
@@ -69,7 +65,6 @@
     <Compile Include="Command\UploadCommand.cs" />
     <Compile Include="Config\AppConnectorConfig.cs" />
     <Compile Include="Connector.cs" />
-    <Compile Include="Extensions.cs" />
     <Compile Include="Model\DirectoryModel.cs" />
     <Compile Include="Model\FileModel.cs" />
     <Compile Include="Model\ObjectModel.cs" />
@@ -98,6 +93,7 @@
     <Compile Include="Service\DefaultImageEditorService.cs" />
     <Compile Include="Service\DefaultVolumeManager.cs" />
     <Compile Include="Service\ICryptoService.cs" />
+    <Compile Include="Service\IDependencyResolver.cs" />
     <Compile Include="Service\IImageEditorService.cs" />
     <Compile Include="Service\IVolume.cs" />
     <Compile Include="Service\IVolumeManager.cs" />
