--- a/elFinder.MVCTest/elFinder.MVCTest.csproj
+++ b/elFinder.MVCTest/elFinder.MVCTest.csproj
@@ -174,6 +174,10 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\elFinder.Connector.Integration.Autofac\elFinder.Connector.Integration.Autofac.csproj">
+      <Project>{5B277E31-2231-409B-819E-A46534B9CE99}</Project>
+      <Name>elFinder.Connector.Integration.Autofac</Name>
+    </ProjectReference>
     <ProjectReference Include="..\elFinder.Connector\elFinder.Connector.csproj">
       <Project>{53FE1298-2B81-4BAE-9255-1C9B7589C644}</Project>
       <Name>elFinder.Connector</Name>
